# gamedevai2025

./: .gitignore  Dockerfile  README.md  TODO.md  build_and_run.sh  install_deps.sh  pyproject.toml
Hunyuan3D-2.1/: api_models.py  api_server.py  constants.py  demo.py  gradio_app.py  logger_utils.py  model_worker.py  requirements.txt  test_api.ipynb  test_api_server.py  torchvision_fix.py
Hunyuan3D-2.1/hy3dpaint/: __init__.py  convert_utils.py  demo.py  textureGenPipeline.py  train.py
Hunyuan3D-2.1/hy3dpaint/DifferentiableRenderer/: MeshRender.py  camera_utils.py  compile_mesh_painter.sh  mesh_utils.py
Hunyuan3D-2.1/hy3dpaint/custom_rasterizer/: setup.py
Hunyuan3D-2.1/hy3dpaint/custom_rasterizer/custom_rasterizer/: __init__.py
Hunyuan3D-2.1/hy3dpaint/hunyuanpaintpbr/: __init__.py  pipeline.py
Hunyuan3D-2.1/hy3dpaint/hunyuanpaintpbr/unet/: attn_processor.py  model.py  modules.py
Hunyuan3D-2.1/hy3dpaint/src/data/: objaverse_hunyuan.py
Hunyuan3D-2.1/hy3dpaint/src/utils/: train_util.py
Hunyuan3D-2.1/hy3dpaint/utils/: image_super_utils.py  multiview_utils.py  pipeline_utils.py  simplify_mesh_utils.py  uvwrap_utils.py
Hunyuan3D-2.1/hy3dshape/: __init__.py  main.py  minimal_demo.py  minimal_demo_with_ckpt.py  minimal_vae_demo.py
Hunyuan3D-2.1/hy3dshape/hy3dshape/: __init__.py  pipelines.py  postprocessors.py  preprocessors.py  rembg.py  schedulers.py  surface_loaders.py
frontend/: app.py  pipeline.py
frontend/templates/: history.html  index.html  result.html
notebooks/: hunyan3d-21_pgv25_lowpoly_pipe.ipynb  hunyan3d-21_pgv25_pipe.ipynb
(+34 files in other folders)
