[project]
name = "lowpoly-generator"
version = "1.0.0"
description = "Low-Poly 3D Model Generator with VRAM optimization"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.3",
    "python-multipart==0.0.20",
    "pydantic==2.10.6",
    "psutil==6.0.0",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "torchaudio==2.5.1",
    "transformers==4.46.0",
    "diffusers==0.30.0",
    "accelerate==1.1.1",
    "Pillow==11.3.0",
    "trimesh==4.4.7",
    "pygltflib==1.16.3",
    "tqdm==4.66.5",
    "python-json-logger==2.0.7",
    "einops>=0.8.1",
    "omegaconf>=2.3.0",
    "scikit-image>=0.25.2",
    "pymeshlab<2025.0",
    "opencv-python==4.10.0.84",
    "xatlas>=0.0.11",
    "numpy>=2.2.6",
    "scipy>=1.15.3",
    "pandas>=2.3.1",
    "imageio>=2.37.0",
    "rembg>=2.0.67",
    "realesrgan>=0.3.0",
    "basicsr>=1.4.2",
    "open3d>=0.19.0",
    "pyyaml>=6.0.2",
    "pytorch-lightning==1.9.5",
    "pybind11>=3.0.0",
    "flask>=3.1.1",
    "onnxruntime>=1.22.1",
    "granian>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.uv]
dev-dependencies = [
    "pytest==8.0.0",
    "black==24.1.1",
    "flake8==7.0.0",
]
